--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit"><i
+                    <input id="search-box" class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+                    <button id="search-btn" class="btn btn-outline-success" onClick="search();"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
             </div>
