--- a/category.html
+++ b/category.html
@@ -64,8 +64,11 @@
     <div class="container">
         <br>
         <ol class="breadcrumb">
-            <li id="results" class="breadcrumb-item"></li>
+            <li class="breadcrumb-item"></li>
         </ol>
+        <div class="row text-center">
+            <h2 id="title"></h2>
+        </div>
         <div id="product-list" class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3">
             <!-- Product List goes here -->
         </div>
