--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link active" aria-current="page" href="#">BSALE Test Samuel EA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Todos los productos</a>
+                        <a class="nav-link active" aria-current="page" href="#" onclick="reloadWithoutRefresh('index.html');">Todos los productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"></a>
@@ -63,9 +63,9 @@
 
     <div class="container">
         <br>
-        <ol class="breadcrumb">
-            <li id="results" class="breadcrumb-item"></li>
-        </ol>
+        <div class="row text-center">
+            <h2 id="title"></h2>
+        </div>
         <div id="product-list" class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3">
             <!-- Product List goes here -->
         </div>
