--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">BSALE Test Samuel EA</a>
+                        <a class="nav-link active" aria-current="page" role="button">BSALE Test Samuel EA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" onclick="reloadWithoutRefresh('index.html');">Todos los productos</a>
+                        <a class="nav-link active" role="button" aria-current="page" onclick="reloadWithoutRefresh('index.html');">Todos los productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" role="button" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Categorías
                         </a>
